fixato scrollbar contatti

--- a/css/style.css
+++ b/css/style.css
@@ -142,6 +142,8 @@ body{
 /* Contacts */
 .contact-list ul{
     list-style: none;
+    height: 100%;
+    overflow-y: auto;
 }
 .contact{
     width: 100%;
@@ -164,6 +166,11 @@ body{
 
 .contact:hover{
     background-color: #F4F5F5;
+}
+
+.contact-list{
+    height: calc(100% - 220px);
+    overflow: hidden;
 }
 
 /*-------------------
@@ -196,6 +203,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    flex-shrink: 0;
 }
 .sent{
     align-self: flex-end;
